--- a/CN_AV/player_template.html
+++ b/CN_AV/player_template.html
@@ -267,8 +267,8 @@ body > .container {
     </div>
 </div>
 
-<!-- ✅ 加载 header.html + header.js -->
 <script>
+/* ========== 加载顶部 header.html + header.js ========== */
 fetch('header.html')
   .then(res => res.text())
   .then(html => {
@@ -284,6 +284,12 @@ fetch('header.html')
     document.body.appendChild(script);
   })
   .catch(err => console.error('加载 header 失败:', err));
+  
+/* ========== 加载底部 footer.html ========== */
+fetch('https://yunvgong.com/footer.html')  <!-- 修改这里 -->
+  .then(r => r.text())
+  .then(html => document.getElementById('footer-placeholder').innerHTML = html)
+  .catch(e => console.warn('无法加载 footer.html:', e));
 </script>
 
 <!-- ✅ 播放逻辑 -->
