--- a/CN_AV/company.html
+++ b/CN_AV/company.html
@@ -116,6 +116,12 @@ fetch('header.html')
   })
   .catch(err => console.error('加载 header 失败:', err));
 
+/* ========== 加载底部 footer.html ========== */
+fetch('https://yunvgong.com/footer.html')  <!-- 修改这里 -->
+  .then(r => r.text())
+  .then(html => document.getElementById('footer-placeholder').innerHTML = html)
+  .catch(e => console.warn('无法加载 footer.html:', e));
+
 /* ======= 加载公司数据 ======= */
 let companies = [], currentPage = 1, pageSize = 18;
 
