--- a/CN_AV/国产AV主页面3.html
+++ b/CN_AV/国产AV主页面3.html
@@ -179,9 +179,10 @@ fetch('header.html')
   });
 
 /* ========== 加载底部 footer.html ========== */
-fetch('footer.html')
+fetch('https://yunvgong.com/footer.html')  <!-- 修改这里 -->
   .then(r => r.text())
-  .then(html => document.getElementById('footer-placeholder').innerHTML = html);
+  .then(html => document.getElementById('footer-placeholder').innerHTML = html)
+  .catch(e => console.warn('无法加载 footer.html:', e));
 
 /* 分类和最新发布 */
 async function loadMainSections() {
