--- a/CN_AV/CN_AV_actressDatas.html
+++ b/CN_AV/CN_AV_actressDatas.html
@@ -122,6 +122,12 @@ fetch('header.html')
     };
     document.body.appendChild(script);
   });
+  
+/* ========== 加载底部 footer.html ========== */
+fetch('https://yunvgong.com/footer.html')  <!-- 修改这里 -->
+  .then(r => r.text())
+  .then(html => document.getElementById('footer-placeholder').innerHTML = html)
+  .catch(e => console.warn('无法加载 footer.html:', e));
 
 // ==== 原有页面逻辑 ====
 function getSeriesName() {
