--- a/CN_AV/index.html
+++ b/CN_AV/index.html
@@ -126,7 +126,7 @@ body {
 <section>
   <div class="section-title-row">
     <div class="section-title">🔥 最新发布A片</div>
-    <a href="https://yunvgong.com/movie/new" class="more-link" target="_blank">看更多 ›</a>
+    <a href="https://yunvgong.com/CN_AV/newAV" class="more-link" target="_blank">看更多 ›</a>
   </div>
   <div class="grid-5" id="latestGrid"></div>
 </section>
