--- a/CN_AV/header.html
+++ b/CN_AV/header.html
@@ -3,11 +3,11 @@
 
 <div class="headerbar">
   <div class="logo">御女宫国产AV</div>
-
+  <a href="https://yunvgong.com/CN_AV/index.html" class="logo">御女宫国产AV</a>
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-    <a href="/movie/new">最新更新</a>
+    <a href="/CN_AV/newAV">最新更新</a>
     <a href="/CN_AV/chinese_AV">国产AV</a>
     <a href="/CN_AV/actress">国产女优</a>
     <a href="/CN_AV/company">A片出品厂</a>
