--- a/CN_AV/actress.html
+++ b/CN_AV/actress.html
@@ -113,6 +113,21 @@ fetch('header.html')
     };
     document.body.appendChild(script);
   });
+  
+/* ========== 加载底部 footer.html ========== */ 
+fetch('https://yunvgong.com/footer.html')
+  .then(r => r.text())
+  .then(html => {
+    // 动态创建底部容器并插入页面
+    let footer = document.getElementById('footer-placeholder');
+    if (!footer) {
+      footer = document.createElement('div');
+      footer.id = 'footer-placeholder';
+      document.body.appendChild(footer);
+    }
+    footer.innerHTML = html;
+  })
+  .catch(e => console.warn('无法加载 footer.html:', e));
 
 // ======= 加载女优数据 =======
 let actresses = [], actressPage = 1, actressPageSize = 18;
