--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
       <div class="footer-right">
         <h4>也可看看</h4>
         <ul class="footer-links-columns">
-          <li><a href="#">御女宫导航</a></li>
+		  <li><a href="https://yunvgong.com/index.html" target="_blank">御女宫导航</a></li>
 		  <li><a href="https://yunvgong.com/CN_AV/index.html" target="_blank">国产AV频道</a></li>
           <li><a href="https://yunvgong.com/JAV/index.html" target="_blank">日本AV频道</a></li>
           <li><a href="#">香港三级</a></li>
